--- a/app/src/main/res/layout/receive.xml
+++ b/app/src/main/res/layout/receive.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content">
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -15,7 +15,7 @@
             android:id="@+id/txt_receiveMessage"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="This is reveive message"
+            android:text="This is receive message"
             android:padding="8dp"
             android:textSize="16sp" />
 
